[package]
name = "lovebot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.14", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
serde = "1.0.136"
serde_json = "1.0.78"
teloxide = { version = "0.5.3", features = ["macros", "auto-send"] }
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
